Better fix for carousel image bleed

--- a/styles.css
+++ b/styles.css
@@ -241,7 +241,7 @@ button {
 .carousel__item {
     position: absolute;
     height: 100%;
-    width: calc(100% + 1px);
+    width: 100%;
     opacity: 1;
     transition: opacity 250ms ease-in-out;
 }
